style for row and fix that style on firefox

--- a/src/Row.css
+++ b/src/Row.css
@@ -1,3 +1,6 @@
+.row{
+    margin-left: 20px;
+}
 .row__posters{
     display: flex;
     overflow-y: hidden;
@@ -19,3 +22,15 @@
 .row__poster:hover{
     transform: scale(1.08);
 }
+.row__posterLarge{
+    max-height: 250px;
+}
+.row__posterLarge:hover{
+    transform: scale(1.09);
+}
+@-moz-document url-prefix() {
+    .row__poster{
+      min-width: 180px;
+      scrollbar-width: none;
+    }
+  }
